--- a/C5-ReproducibleResearch/pproject1/PA1.Rmd
+++ b/C5-ReproducibleResearch/pproject1/PA1.Rmd
@@ -48,7 +48,7 @@ df.stepsDayMean <- mean(df.stepsDay$x, na.rm=T)
 df.stepsDayMedian <- median(df.stepsDay$x, na.rm=T)
 ```
 
-The mean of steps taken per day is `r df.stepsDayMean`. The median of steps taken per day is `r df.stepsDayMedian`. 
+The mean of steps taken per day is `r as.integer(df.stepsDayMean)`. The median of steps taken per day is `r df.stepsDayMedian`. 
 
 Now we can also draw the total step count for each day as historgram: 
 
@@ -65,9 +65,7 @@ hist(df.stepsDay$x,
 ## What is the average daily activity pattern?
 
 1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis)
-and the average number of steps taken, averaged across all days (y-axis). 
-
-In other words: what is the average number of steps taken for each intervall across all days (note that intervall IDs repeat every 24h). 
+and the average number of steps taken, averaged across all days (y-axis). In other words: what is the average number of steps taken for each intervall across all days (note that intervall IDs repeat every 24h). 
 
 ```{r}
 df.stepsInterval <- aggregate(df$steps, by=list(df$interval), FUN=mean, na.rm=T)
@@ -130,12 +128,12 @@ hist(df.clean.stepsDay$x,
      xlab="Steps taken")
 ```
 
-There are no differences between the mean and median of the two datasets. First, because the calculation of the mean/media values of the original dataframe removed the NA values. Second, because the missing values filled in are based on the mean values of the interval, i.e. new newly calculated mean can't differ much from the original. There is no big difference between mean/media steps between the two dataframes.  
+There are no big differences between the mean and median of the two datasets. First, because the calculation of the mean/media values of the original dataframe can only be calculated by removing the NA values first. Second, because the missing values filled in are based on the mean values of the interval, i.e. new newly calculated mean basically is drawn closer to the mean values of the first dataset anyway. There is no big difference between mean/media steps between the two dataframes.  
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
-Let's add first an extra column to the dataframe indicating if the given date is a weekday or not and then create two subsets, one containing the data for weekends and the other for weekdays. 
+Let's add first an extra column to the dataframe indicating if the given date is a weekday or not and then create two subsets, one containing the data for weekends and the other for weekdays. We also need to convert the date from class character to class Date in order for the weekday/end function to do its job. 
 
 ```{r}
 df.clean$date <- strptime(df.clean$date, "%Y-%m-%d")
@@ -145,7 +143,7 @@ df.weekend <- df.clean[df.clean$weekend == TRUE,]
 df.weekday <- df.clean[df.clean$weekend == FALSE,]
 ```
 
-Finally, calculate the average of steps for each interval for the two subsets and draw the graphics. As it is readily apparent, the pattern of average steps taken is different. Whereas weekend steps are more equally distributed across all intervals, the weekdays have a realively early peak (sports?) and then become lower for the rest of the day. There is more walking during the weekend, while the lower rates during the weekday could be interpreted as reflecting sitting at work or school? 
+Finally, calculate the average of steps for each interval for the two subsets and draw the graphics. 
 
 ```{r fig.height=10}
 df.weekend.steps <- aggregate(df.weekend$steps, by=list(df.weekend$interval), FUN=mean)
@@ -170,7 +168,8 @@ plot( x=df.weekday.steps[,1],
       xlab="Interval ID")
 ```
 
-As the graphics show, there is a difference between weekdays and weekends. 
+As the graphics show, the pattern of steps taken is different: whereas the mean of weekend steps are more equally distributed across all intervals, the weekdays have a realively early peak (sports?) and then become lower for the rest of the day. The relatively lower rates during a large part of the weekday could be interpreted as reflecting sitting at work or school. 
+
 
 
 
